dist_man_MANS =					\
	mtree.5					\
	mtree.8					\
	mtree_cksum.3				\
	mtree_cksum_create.3			\
	mtree_cksum_fd.3			\
	mtree_cksum_free.3			\
	mtree_cksum_get_result.3		\
	mtree_cksum_path.3			\
	mtree_cksum_reset.3			\
	mtree_cksum_update.3			\
	mtree_device.3				\
	mtree_device_copy.3			\
	mtree_device_create.3			\
	mtree_device_free.3			\
	mtree_device_get_error.3		\
	mtree_device_get_fields.3		\
	mtree_device_get_format.3		\
	mtree_device_get_value.3		\
	mtree_device_parse.3			\
	mtree_device_reset.3			\
	mtree_device_set_format.3		\
	mtree_device_set_value.3		\
	mtree_device_string.3			\
	mtree_digest.3				\
	mtree_digest_create.3			\
	mtree_digest_fd.3			\
	mtree_digest_free.3			\
	mtree_digest_get_available_types.3	\
	mtree_digest_get_types.3		\
	mtree_digest_get_result.3		\
	mtree_digest_path.3			\
	mtree_digest_reset.3			\
	mtree_digest_update.3			\
	mtree_entry.3				\
	mtree_entry_append.3			\
	mtree_entry_compare.3			\
	mtree_entry_compare_keywords.3		\
	mtree_entry_copy.3			\
	mtree_entry_copy_all.3			\
	mtree_entry_copy_keywords.3		\
	mtree_entry_count.3			\
	mtree_entry_create.3			\
	mtree_entry_find.3			\
	mtree_entry_find_prefix.3		\
	mtree_entry_free.3			\
	mtree_entry_free_all.3			\
	mtree_entry_get_cksum.3			\
	mtree_entry_get_contents.3		\
	mtree_entry_get_device.3		\
	mtree_entry_get_dirname.3		\
	mtree_entry_get_first.3			\
	mtree_entry_get_flags.3			\
	mtree_entry_get_gid.3			\
	mtree_entry_get_gname.3			\
	mtree_entry_get_inode.3			\
	mtree_entry_get_keywords.3		\
	mtree_entry_get_last.3			\
	mtree_entry_get_link.3			\
	mtree_entry_get_md5digest.3		\
	mtree_entry_get_mode.3			\
	mtree_entry_get_name.3			\
	mtree_entry_get_next.3			\
	mtree_entry_get_nlink.3			\
	mtree_entry_get_path.3			\
	mtree_entry_get_previous.3		\
	mtree_entry_get_resdevice.3		\
	mtree_entry_get_rmd160digest.3		\
	mtree_entry_get_sha1digest.3		\
	mtree_entry_get_sha256digest.3		\
	mtree_entry_get_sha384digest.3		\
	mtree_entry_get_sha512digest.3		\
	mtree_entry_get_size.3			\
	mtree_entry_get_tags.3			\
	mtree_entry_get_time.3			\
	mtree_entry_get_type.3			\
	mtree_entry_get_uid.3			\
	mtree_entry_get_uname.3			\
	mtree_entry_insert_after.3		\
	mtree_entry_insert_before.3		\
	mtree_entry_merge.3			\
	mtree_entry_merge_fast.3		\
	mtree_entry_prepend.3			\
	mtree_entry_reverse.3			\
	mtree_entry_set_cksum.3			\
	mtree_entry_set_contents.3		\
	mtree_entry_set_device.3		\
	mtree_entry_set_device_number.3		\
	mtree_entry_set_dirname.3		\
	mtree_entry_set_flags.3			\
	mtree_entry_set_gid.3			\
	mtree_entry_set_gname.3			\
	mtree_entry_set_inode.3			\
	mtree_entry_set_keywords.3		\
	mtree_entry_set_link.3			\
	mtree_entry_set_md5digest.3		\
	mtree_entry_set_mode.3			\
	mtree_entry_set_nlink.3			\
	mtree_entry_set_resdevice.3		\
	mtree_entry_set_resdevice_number.3	\
	mtree_entry_set_rmd160digest.3		\
	mtree_entry_set_sha1digest.3		\
	mtree_entry_set_sha256digest.3		\
	mtree_entry_set_sha384digest.3		\
	mtree_entry_set_sha512digest.3		\
	mtree_entry_set_size.3			\
	mtree_entry_set_tags.3			\
	mtree_entry_set_time.3			\
	mtree_entry_set_type.3			\
	mtree_entry_set_uid.3			\
	mtree_entry_set_uname.3			\
	mtree_entry_sort.3			\
	mtree_entry_sort_path.3			\
	mtree_entry_unlink.3			\
	mtree_spec.3				\
	mtree_spec_diff.3
